removed ron package

--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-select": "^1.0.0-beta14",
-    "reselect": "^2.5.1",
-    "ron-react-autocomplete": "^3.0.0"
+    "reselect": "^2.5.1"
   },
   "devDependencies": {
     "avcoveralls": "^1.0.0",
