--- a/package.json
+++ b/package.json
@@ -95,13 +95,13 @@
     "node-dir": "^0.1.12",
     "object-assign": "^2.1.1",
     "pretty-hrtime": "^0.2.1",
-    "react": "~0.14.6",
+    "react": "15.1.0",
     "react-addons-shallow-compare": "^15.3.0",
     "react-addons-test-utils": "^0.14.6",
     "react-addons-transition-group": "^15.3.0",
     "react-dnd-test-backend": "^1.0.2",
     "react-docgen": "^2.8.2",
-    "react-dom": "~0.14.6",
+    "react-dom": "15.1.0",
     "react-router": "^0.13.3",
     "rewire": "^2.1.3",
     "rewire-webpack": "^1.0.0",
